@@ -26,9 +26,10 @@ items<dtml-if name="SearchableText"> matching "&dtml-SearchableText;"</dtml-if>.
  </dtml-if>
 
  <tr>
-  <td><dtml-if icon>
+  <td>
+   <dtml-if getIcon>
    <a href="&dtml-objURL;"><img
-    src="&dtml-BASEPATH1;/&dtml-icon;" border="0"
+    src="&dtml-BASEPATH1;/&dtml-getIcon;" border="0"
     alt="[&dtml.missing-Type;]"
     title="[&dtml.missing-Type;]"></a>
    </dtml-if>
